deployment/src/main/yaml-templates/esm/lib/itom-maya-deployment-template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maya-server-deployment
  namespace: ${namespace}
  labels:
    app: maya-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: maya-server-deployment
  template:
    metadata:
      labels:
        app: maya-server-deployment
    spec:
      containers:
        - name: maya
          image: itom-docker-hcm.orgartifactory.swinfra.net:443/hpeswitomsandbox/maya-server:${build_number}
          ports:
            - containerPort: 9994
              protocol: TCP
          volumeMounts:
            - name: "nfs"
              mountPath: "/mnt/account-config"
              subPath: "maya/config/mockoon"
            - name: "nfs"
              mountPath: "/mnt/account-data"
              subPath: "maya/data/account"
            - name: "nfs"
              mountPath: "/mnt/recommendation-config"
              subPath: "maya/config/recommendation"
            - name: "nfs"
              mountPath: "/mnt/recommendation-data"
              subPath: "maya/data/recommendation"
            - name: "nfs"
              mountPath: "/mnt/aws-bills"
              subPath: "maya/data/billing/s3mock"
            - name: "nfs"
              mountPath: "/mnt/azure-bills"
              subPath: "maya/data/billing/azurite"
            - name: "nfs"
              mountPath: "/mnt/byod"
              subPath: "maya/data/byod"
            - name: "nfs"
              mountPath: "/tmp/maya/logs"
              subPath: "maya/logs"
      volumes:
        - name: "vault-token"
          emptyDir: {}
        - name: "nfs"
          persistentVolumeClaim:
            claimName: maya-volume
