deployment/src/main/yaml-templates/esm/lib/itom-maya-service-template.yaml
apiVersion: v1
kind: Service
metadata:
  name: maya-server-service
  namespace: ${namespace}
spec:
  selector:
    app: maya-server-deployment
  ports:
    - protocol: TCP
      port: 9994
      targetPort: 9994
